# lyme

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: API.md  README.md  architecture.md  bugs.md  cli.md  configuration.md  contributing.md  development.md  installation.md  release.md  troubleshooting.md  usage.md
examples/: pipeline.py
examples/data/: financial_records.csv  sensor_readings.json  software_logs.txt  spacecraft_telemetry.csv  synthetic_system.csv
src/cognis_os/: __init__.py  cli.py
src/cognis_os/kse/: __init__.py  cli.py  engine.py
src/cognis_os/kse/analyzers/: threshold.py  transitions.py
src/cognis_os/kse/exporters/: __init__.py  report.py  rules_json.py
src/cognis_os/kse/knowledge/: __init__.py  contradiction.py  graph.py
src/cognis_os/oms/: __init__.py  cli.py  config.py  equations.py  exporters.py  subsystem.py  twin.py
src/cognis_os/uoc/: __init__.py  alignment.py  cli.py  missing.py  models.py
src/cognis_os/uoc/exporters/: __init__.py  observation.py  sparse.py  state_matrix.py
src/cognis_os/uoc/normalizers/: types.py
src/cognis_os/uoc/parsers/: base.py  csv_parser.py
src/lyme/: __init__.py  cli.py
src/lyme/kse/: __init__.py  cli.py  config.py  ingestion.py  models.py
src/lyme/kse/analyzers/: __init__.py  base.py  causal.py  correlation.py  modes.py  temporal.py
src/lyme/oms/: __init__.py  cli.py  exporters.py  influence.py  models.py  state_machine.py  synthesizer.py
src/lyme/uoc/: canonicalizer.py  cli.py  config.py  registry.py  store.py
(+12 files in other folders)
